--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@types/passport-github2": "^1.2.5",
     "@types/passport-local": "^1.0.35",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.0",
     "express-layouts": "^1.0.0",
     "express-session": "^1.17.1",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.12",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
